Add question validation for questions 1, 2, and 3

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
           <p>Who is Anakin Skywalker's son?</p>
           <div class="answer">
               <input type="radio" id="question3_answer1" name="answer3" />
-              <label for="question3_answer1">Revenge of the Sith</label>
+              <label for="question3_answer1">Luke Skywalker</label>
           </div>
 
           <div class="answer">
               <input type="radio" id="question3_answer2" name="answer3" />
-              <label for="question3_answer2">A New Hope</label>
+              <label for="question3_answer2">Chewbacca</label>
           </div>
 
           <div class="answer">
               <input type="radio" id="question3_answer3" name="answer3" />
-              <label for="question3_answer3">Return of the Jedi</label>
+              <label for="question3_answer3">The Great Gambini</label>
           </div>
 
           <div class="answer">
               <input type="radio" id="question3_answer4" name="answer3" />
-              <label for="question3_answer4">The Phantom Menace</label>
+              <label for="question3_answer4">Darth Mal</label>
           </div>
         </li>
       </ol>
