Add styles to main.css

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>JS Quiz</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div class="quiz-container">
       <div id="quiz">
         <h1>Star Wars Quiz</h1>
-        <hr />
+        <hr style="margin-top: 20px;" />
         <p id="question">Who is Darth Vader?</p>
         <div class="buttons">
-          <button id="b0"><span id="c0"></span></button>
+          <button id="b0"><span id="c0">Hello</span></button>
           <button id="b1"><span id="c1"></span></button>
           <button id="b2"><span id="c2"></span></button>
           <button id="b3"><span id="c3"></span></button>
         </div>
-        <hr />
+        <hr style="margin-top: 50px" />
         <footer>
           <p id="progress">Question x of n</p>
         </footer>
