Fix populateQuestion() function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr style="margin-top: 20px;" />
         <p id="question">Who is Darth Vader?</p>
         <div class="buttons">
-          <button id="b0"><span id="c0">Hello</span></button>
+          <button id="b0"><span id="c0"></span></button>
           <button id="b1"><span id="c1"></span></button>
           <button id="b2"><span id="c2"></span></button>
           <button id="b3"><span id="c3"></span></button>
