Change form elements

--- a/login.html
+++ b/login.html
@@ -7,10 +7,10 @@
   <body>
     <div class="container">
       <form class="" action="index.html" method="post">
-        <label for="username">Username</label>
-        <input id="username" type="text" name="" value="username">
-        <label for="password">Password</label>
-        <input id="password" type="text" name="" value="password">
+        <label for="uname">Username</label>
+        <input id="uname" type="text" name="" placeholder="username">
+        <label for="pw">Password</label>
+        <input id="pw" type="text" name="" placeholder="password">
         <button type="submit" name="button">Login</button>
       </form>
     </div>
