Clean up index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="quiz">
         <h1>Star Wars Quiz</h1>
         <hr style="margin-top: 20px;" />
-        <p id="question">Who is Darth Vader?</p>
+        <p id="question"></p>
         <div class="buttons">
           <button id="b0"><span id="c0"></span></button>
           <button id="b1"><span id="c1"></span></button>
