--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>JS Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+
+    <title>JS Quiz</title>
   </head>
   <body>
     <div class="quiz-container">
-      <div id="quiz">
+      <form>
+        <div class="form-group">
+          <label for="quiz-select">Select a quiz</label>
+          <select class="custom-select" id="quiz-select">
+            <option selected>Open this select menu</option>
+            <option value="1">Star Wars</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <!-- <div id="quiz">
         <h1>Star Wars Quiz</h1>
         <hr style="margin-top: 20px;" />
         <p id="question"></p>
@@ -22,10 +35,13 @@
         <footer>
           <p id="progress">Question x of n</p>
         </footer>
-      </div>
+      </div> -->
     </div>
     <script src="quiz-controller.js"></script>
     <script src="question.js"></script>
     <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
